--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -12,7 +12,7 @@ $bc-beige: #f5f3ef;
   min-height: 100vh;
 
   @media (min-width: 1024px) {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -25,7 +25,7 @@ $bc-beige: #f5f3ef;
   padding: 2rem;
 
   @media (min-width: 1024px) {
-    grid-column: span 2;
+    grid-column: span 1;
   }
 }
 
@@ -33,7 +33,7 @@ $bc-beige: #f5f3ef;
 .mainColumn {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 4rem 2rem 2rem;
 
   @media (min-width: 1024px) {
     grid-column: span 3;
