--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-bc-beige: #f5f3ef;
+  --color-bc-text-gray: #424d5b;
+  --color-bc-text-black: #373737;
   --font-jetbrains-mono: var(--font-jetbrains-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
