--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,6 +3,8 @@
 
 // Color variables
 $bc-beige: #f5f3ef;
+$bc-text-gray: #424d5b;
+$bc-text-black: #373737;
 
 // Grid layout for two-column design
 .two-column-layout {
