--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -10,7 +10,7 @@ $bc-text-black: #373737;
 .two-column-layout {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 4rem;
+  gap: 0;
   min-height: 100vh;
 
   @media (min-width: 1024px) {
