--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --color-bc-beige: #f5f3ef;
   --color-bc-text-gray: #424d5b;
   --color-bc-text-black: #373737;
+  --color-bc-red: #e01236;
   --font-jetbrains-mono: var(--font-jetbrains-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
