--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,6 +5,7 @@
 $bc-beige: #f5f3ef;
 $bc-text-gray: #424d5b;
 $bc-text-black: #373737;
+$bc-red: #e01236;
 
 // Grid layout for two-column design
 .two-column-layout {
