--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -25,7 +25,7 @@ $bc-red: #e01236;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 2rem;
+  //   padding: 2rem;
 
   @media (min-width: 1024px) {
     grid-column: span 1;
