--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --color-bc-text-black: #373737;
   --color-bc-red: #e01236;
   --font-jetbrains-mono: var(--font-jetbrains-mono);
+  --font-nunito-sans: var(--font-nunito-sans);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
