--- a/src/styles/article-content.scss
+++ b/src/styles/article-content.scss
@@ -26,14 +26,25 @@
     line-height: 1.4 !important; // Tighter line spacing
   }
 
-  // List spacing
+  // List spacing and styling
   ul,
   ol {
     margin-bottom: 1rem;
     padding-left: 1.5rem;
   }
 
+  ol {
+    list-style-type: decimal;
+    list-style-position: outside;
+  }
+
+  ul {
+    list-style-type: disc;
+    list-style-position: outside;
+  }
+
   li {
     margin-bottom: 0.5rem;
+    display: list-item;
   }
 }
