article content renamed to markdown content

--- a/src/styles/markdown-content.scss
+++ b/src/styles/markdown-content.scss
@@ -1,10 +1,10 @@
-// Article Content Styles
-// This file contains styles for article content rendering
+// Markdown Content Styles
+// This file contains styles for markdown content rendering
 
 // Highlight.js theme for syntax highlighting
 @import "highlight.js/styles/atom-one-dark.css";
 
-.article-content {
+.markdown-content {
   max-width: none;
   margin-bottom: 3rem; // 48px equivalent to mb-12
 
