Experiment with comic strip layout in Decktop & mobile view

--- a/src/styles/markdown-content.scss
+++ b/src/styles/markdown-content.scss
@@ -158,6 +158,12 @@
     margin-right: auto;
   }
 
+  // When a custom comic strip is present, hide the first image/figure from markdown
+  .has-comic-strip > p:first-of-type,
+  .has-comic-strip > figure:first-of-type {
+    display: none;
+  }
+
   // Figures and captions
   figure {
     margin: 1.5rem 0;
