Added 8 Case studies using markdown files. Hidden the cover photo from the page. Added more tech icons that were needed for some case studies

--- a/src/styles/markdown-content.scss
+++ b/src/styles/markdown-content.scss
@@ -43,6 +43,7 @@
     color: var(--color-bc-red);
   }
 
+
   // Paragraph spacing
   p {
     margin-bottom: 0.5rem;
@@ -99,7 +100,7 @@
     position: relative;
 
     @media (min-width: 640px) {
-      margin: 1.5rem 4rem;
+      // margin: 1.5rem 4rem;
     }
 
     code {
