--- a/src/styles/markdown-content.scss
+++ b/src/styles/markdown-content.scss
@@ -28,6 +28,7 @@
   h2 {
     font-size: 1.875rem;
     font-weight: 600;
+    font-family: var(--font-jetbrains-mono);
     line-height: 1.3;
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -36,7 +37,8 @@
 
   h3 {
     font-size: 1.3rem;
-    font-weight: 600;
+    font-family: var(--font-jetbrains-mono);
+    font-weight: 400;
     line-height: 1.4;
     margin-top: 1.5rem;
     margin-bottom: 0.75rem;
