new homepage changes - new applied ai icons - articles: retag articles based on new expertise areas - articles: fix tech tags - homepage desktop changes - nav sidebar changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-bc-text-gray: #424d5b;
   --color-bc-text-black: #373737;
   --color-bc-red: #e01236;
+  --color-bc-purple: #3a1a53;
   --font-jetbrains-mono: var(--font-jetbrains-mono);
   --font-nunito-sans: var(--font-nunito-sans);
   --color-sidebar-ring: var(--sidebar-ring);
